syntax = "proto3";

option go_package = "github.com/tubagusmf/tbwallet-user-auth/pb/user";

package user;

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    int64 kyc_status_id = 4;
    string role = 5;
}

message SessionUser {
    int64 id = 1;
    int64 kyc_status_id = 2;
}

message GetUserByIDRequest {
    int64 user_id = 1;
}

message GetUserByIDResponse {
    User user = 1;
}

message ValidateSessionRequest {
    string token = 1;
}

message ValidateSessionResponse {
    SessionUser user = 1;
}

service UserService {
    rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
    rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
}